# sleep

./: .gitignore  .gitmodules  LICENSE  README.md
SleepEngine/: .clang-format  SleepEngine.sln  SleepEngine.vcxproj  SleepEngine.vcxproj.filters  main.cpp  stdafx.h
SleepEngine/Config/: config.json
SleepEngine/Demos/: ciri.cpp  ciri.h  test_relative_transform.h
SleepEngine/Ecs/tests/tmengine/: CMakeLists.txt  main.cpp  testfoo.cpp  testfoo.h
SleepEngine/Ecs/tests/tmengine/ecs/: print_type.h  settings.cpp  signature_bitsets.cpp  signature_bitsets_storage.cpp  test_type_defs.h
SleepEngine/Ecs/tmengine/: AddBrigand.cmake  CMakeLists.txt  main.cpp
SleepEngine/Ecs/tmengine/ecs/: ecs.h
SleepEngine/Ecs/tmengine/ecs/signatures/: Settings.h  Signature.h  SignatureBitsets.h  SignatureBitsetsStorage.h  brigand_type_macro.h  signatures.h
SleepEngine/Engine/: Camera.cpp  Camera.h  Clock.cpp  Clock.h  Config.cpp  Config.h  DeltaTimeData.h  EngineConfig.h  EntityManager.cpp  EntityManager.h  GameWindow.cpp  GameWindow.h  Object.cpp  Object.h  ObjectTree.cpp  ObjectTree.h  SleepTypes.h  Timer.cpp  Timer.h  Transform2DData.cpp  Transform2DData.h  Updator.cpp  Updator.h  object_shortcuts.h
SleepEngine/Props/: CustomBuildStep.props  SharedPch.props  SleepProps.props  SleepPropsDebug.props  SleepSharedPch.props
SleepEngine/SleepPch/: SleepPch.vcxproj  SleepPch.vcxproj.filters
profiles/: slp_one_thread_opengl_buffer_lenovoZ51_win10home.prof
scripts/: install_dependencies.bat  install_generator_pkg.bat  regenerate_textures_file.bat  vcpkg.nuget.nuspec
(+124 files in other folders)
